# AuthoritySpoke

./: .gitignore  .pydocstyle  .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  Pipfile  README.rst  allegations.py  changelog.md  changelog.rst  code_of_conduct.md  context.py  contributor_agreement.md  contributor_agreement.txt  enactments.py  entities.py  environment.yml  evidence.py  facts.py  file_import.py  holding_watt.json  license.md  opinions.py  pytest.ini  readme.md  requirements-dev.txt  requirements-docs.txt  requirements.txt  roman.py  rules.py  setup.cfg  setup.py  spoke.py  test_spoke.py  tox.ini
.circleci/: config.yml
AuthoritySpoke/: __init__.py  allegations.py  context.py  enactments.py  entities.py  evidence.py  factors.py  facts.py  opinions.py  rules.py  spoke.py
authorityspoke/: __init__.py  analogies.py  codes.py  comparisons.py  context.py  courts.py  decisions.py  enactments.py  entities.py  evidence.py  explanations.py  factorgroups.py  factors.py  facts.py  formatting.py  groups.py  holdings.py  jurisdictions.py  opinions.py  pleadings.py  predicates.py  procedures.py  relations.py  rules.py  selectors.py
docs/: api_core.rst  api_io.rst  conf.py  index.rst  requirements.txt
example_data/: to_yaml.py
input/: holding_brad.json  holding_cardenas.json  holding_lotus.json  holding_nested_factor.json  holding_watt.json
json/: brad_h.json  watt_h.json
notebooks/: create_holding_data.ipynb  introduction.ipynb  load_yaml_holdings.ipynb  statute_rules.ipynb  structure_of_holdings.ipynb  template_strings_and_explanations.ipynb
(+210 files in other folders)
